--- a/develop/print.html
+++ b/develop/print.html
@@ -4617,10 +4617,18 @@ room_prejoin_state:
    #additional_event_types:
    #  - org.example.custom.event.type
 
-# By default when puppeting another user, the user who has created the
-# access token for puppeting is tracked. If this is enabled, both
-# requests are tracked. Implicitly enables MAU tracking for puppeted users.
-# Uncomment to also track puppeted user IP's.
+# We record the IP address of clients used to access the API for various
+# reasons, including displaying it to the user in the &quot;Where you're signed in&quot;
+# dialog.
+#
+# By default, when puppeting another user via the admin API, the client IP
+# address is recorded against the user who created the access token (ie, the
+# admin user), and *not* the puppeted user.
+#
+# Uncomment the following to also record the IP address against the puppeted
+# user. (This also means that the puppeted user will count as an &quot;active&quot; user
+# for the purpose of monthly active user tracking - see 'limit_usage_by_mau' etc
+# above.)
 #
 #track_puppeted_user_ips: true
 
